2006-08-23 Tim
 PATCH: [ 1543687 ] Google AdSense setup
  Web: page.inc new file sitemap.txt
  Web\css: all.css

2006-08-10 Tim
 PATCH: [ 1538297 ] Website changes for new stable release 2.4.10
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.4: changes.txt index.php
 PATCH: [ 1536348 ] Known issue: some plugins need VB runtime
  Web\2.4: limitations.php
 Fix missing </div> for new tab layout.
  Web: page.inc

2006-08-05 Tim
 PATCH: [ 1534820 ] Web: Pimp my tabs ;)
  Web: page.inc
  Web\css: all.css
 BUG: [ 1534996 ] Web: WinCVS hints -page has outdated information
  Web: .htaccess page.inc
  Web\developer: removed wincvs.php

2006-07-31 Tim
 PATCH: [ 1531259 ] Web: Known limitation: In linefilters $ does not match EOL
  Web\2.4: limitations.php

2006-06-30 Tim
 Add 'Gal Hammer' to developers.
  Web\developer: developers.xml

2006-06-27 Tim
 PATCH: [ 1512744 ] Developer-page download links don't work
  Web: page.inc
  Web\developer: wincvs.php

2006-06-13 Tim
 PATCH: [ 1505671 ] Website changes for new stable release 2.4.8
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.4: changes.txt index.php

2006-05-23 Tim
 PATCH: [ 1493059 ] Update czech translator and translation status
  Web\developer\l10n: status.php status.xml

2006-05-22 Tim
 PATCH: [ 1493090 ] Clarify we won't accept changed .lang files as translations
  Web\developer\l10n: instructions.php

2006-05-20 Tim
 RFE: [ 1224436 ] WinMerge as an Eclipse IDE plugin?
  Web: links.php

2006-03-24 Tim
 PATCH: [ 1457946 ] Add known issue about 64bit windows and shell extension
  Web\2.4: limitations.php

2006-03-15 Tim
 PATCH: [ 1449943 ] Web: Use new logo
  Web: page.inc
  Web\css: print.css
  Web\images: new file logo.gif

2006-03-01 Tim
 PATCH: [ 1441282 ] Website changes for new stable release 2.4.6
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.4: changes.txt index.php

2006-02-28 Tim
 PATCH: [ 1440383 ] Suggested addition to manual about bug reports