@@ -25,6 +25,14 @@ body {
 	display: none;
 }
 
+#rightsideads {
+	display: none;
+}
+
+#bottomads {
+	display: none;
+}
+
 #content {
 	margin: 0;
 	padding: 5px;
